Support schema version 0.10